--- a/case1/style/sp_layout.css
+++ b/case1/style/sp_layout.css
@@ -14,16 +14,30 @@
 */
 
 /* Window and Body Styles */
+html {
+   height: 100%;
+}
 
+body{
+   width: 95%;
+   max-width: 960px;
+   min-width: 640px;
+   /* to center the body: */
+   margin-left: auto;
+   margin-right: auto;
+   display: grid;
+   
+}
 
-
+img{
+   display: block;
+}
 
 /* CSS Grid Styles */
-
-
-
-
-
+body{
+   grid-template-columns: 1fr 1fr 1fr 1fr;
+   grid-template-areas: "body body body body";
+}
 
 /* Horizontal Navigation List Styles */
 
