Created section styles: section img and p

--- a/case1/style/sp_layout.css
+++ b/case1/style/sp_layout.css
@@ -59,7 +59,20 @@ aside{
 }
 
 /* Section Styles */
-
+section img{
+   width: 50%;
+   margin-top: 0%;
+   margin-bottom: 0%;
+   margin-left: auto;
+   margin-right: auto;
+}
+section p{
+   width: 70%;
+   margin-top: 0%;
+   margin-bottom: 0%;
+   margin-left: auto;
+   margin-right: auto;
+}
 
 
 
