--- a/case1/style/sp_layout.css
+++ b/case1/style/sp_layout.css
@@ -14,8 +14,9 @@
 */
 
 /* Window and Body Styles */
-html {
+html,body{
    height: 100%;
+
 }
 
 body{
@@ -42,9 +43,14 @@ body{
 #logo{
    grid-column: span 3;
    width: 100%;
+   height: 100%;
 }
 
 /* Horizontal Navigation List Styles */
+.horizontal {
+   grid-column: span 4;
+}
+
 footer{
    grid-column: span 4;
 }
@@ -74,7 +80,29 @@ section p{
    margin-right: auto;
 }
 
-
-
 /* Customer Comment Styles */
+aside{
+   width: 75%;
+   padding-bottom: 30px;
+   margin-left: auto;
+   margin-right: auto;
+}
+
+aside :nth-of-type(odd){
+   /* display: grid; */
+   justify-self: right;
+}
+
+aside img{
+   float: left;
+   width: 20%;
+}
+
+aside p{
+   float: left;
+   width: 75%;
+   margin-left: 5%;
+}
+
+
 
