--- a/case1/style/sp_layout.css
+++ b/case1/style/sp_layout.css
@@ -14,8 +14,9 @@
 */
 
 /* Window and Body Styles */
-html,body{
+html{
    height: 100%;
+   min-height: 100%;
 
 }
 
@@ -27,6 +28,7 @@ body{
    margin-left: auto;
    margin-right: auto;
    display: grid;
+   height: 100%;
    
 }
 
